--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">Polihack app</string>
-    <string name="msg_login_fb">Login with facebook</string>
-    <string name="msg_unknown_error">Unknown error</string>
-    <string name="app_id">459579727578227</string>
+    <string name="app_name">MVP RX app</string>
 </resources>
